feat:errore2.0s.